syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/empty.proto";

package emails;

option go_package = "github.com/DKhorkov/hmtm-emails/api/protobuf/notifications;notifications";


service EmailsService {
  rpc GetUserEmailCommunications(GetUserEmailCommunicationsIn) returns (GetUserEmailCommunicationsOut) {}
  rpc CountUserEmailCommunications(CountUserEmailCommunicationsIn) returns (CountOut) {}
}

message GetUserEmailCommunicationsIn {
  uint64 userID = 1;
  optional Pagination pagination = 2;
}

message Pagination {
  optional uint64 limit = 1;
  optional uint64 offset = 2;
}

message Email {
  uint64 ID = 1;
  uint64 userID = 2;
  string email = 3;
  string content = 4;
  google.protobuf.Timestamp sentAt = 5;
}

message GetUserEmailCommunicationsOut {
  repeated Email emails = 1;
}

message CountUserEmailCommunicationsIn {
  uint64 userID = 1;
}

message CountOut {
  uint64 count = 1;
}
